# mygit

./: RT1052.md  ceph.md  chg_kernel.sh  cinder.md  cinder.md.html  daydayup.md  daydayup.md.html  daydayup2.md  ddy.md  ddy2.md  git_user_manual.md  iSCSI.md  iSCSI_my.md  kernel.md  lanqi.md  luohu.md  shell.md  tags  tobuy.md  todo.md  灯光考试.md  灯光考试.md.html
RT1050/: RT1052.md  evkmimxrt1050_ram.ini  evkmimxrt1050_sdram_init.ini  hello_world.map  startup_mimxrt1052.lst
aws/: ec2.md  new.json  vpc.md  vpn.md
ceph/: 4-可行性报告提纲-技术创新计划创业资助.doc  48C7E459-05A7-4d8a-A699-C27FB2B10207.txt  6机框测试.xlsx  ARM 385系统环境操作手册说明V1.2.docx  Bluestore.asta  Ceph 软件更新流程 (自动保存的).docx  Ceph 软件更新流程.docx  Ceph管理平台_集群概况需求.docx  Ceph管理平台总体框架和优先级.xlsx  a.txt  asm0001_20180110(1).stp  boot.txt  ceph.asta  ceph发布准备.xlsx  ceph界面监控管理工具比较.xlsx  ceph管理平台功能需求.docx  ceph管理平台功能需求_修正版.docx  ceph需求分析.xls  deploy.txt  kernel_requirements.md  kernel_requirements.md.html  knowledge.md  rest-api.docx  ~$M 385系统环境操作手册说明V1.2.docx  ~$ph 软件更新流程.docx  ~$ph管理平台功能需求.docx  内核模块统计.xlsx  监控管理工具.asta  项目可行性报告模板.doc
ceph.knowledge/: del_osd.sh  iSCSI_my.md
chenxi/: CMakeLists.txt
chenxi/application/: CMakeLists.txt
chenxi/application/mq_server/: CMakeLists.txt  mq_client.c  mq_client.h  mq_common.h  mq_server.c
chenxi/application/semaphore_test/: CMakeLists.txt  semaphore_test.cpp
chenxi/application/service_test/: CMakeLists.txt  service_test.cpp
chenxi/basic/: CMakeLists.txt
chenxi/basic/message_queue/: CMakeLists.txt  message_queue.c  message_queue.h
chenxi/basic/statemachine/: statemachine.c  statemachine.h
chenxi/basic/thread/: thread.c  thread.h
chenxi/basic_cpp/: CMakeLists.txt
chenxi/basic_cpp/cx_semaphore/: cx_semaphore.cpp  cx_semaphore.h
chenxi/basic_cpp/service/: service.cpp  service.h
chenxi/main/: main.c
cloud/: aws.md
daydayup/: build_kernel.md
debug/: .ceph_abort.c.swp  a.out  backtrace_fd.c  backtrace_info.txt  callstack.md
earthnet/: earthnet.asta
ke3/: ke3.md  汽车.md
kernel/: kernel.md  neu_read_oprom.c  vmcore.md
kvm/: kvm.md  msr.md
linux/: acpi.md  docker.md  encrypt.md  fio.md  gdb.md  git_user_manual.md  log.md  mainlib.db  make.md  mem.md  pci.md  pci_option_rom_driver.md  rpm.md  serial.md  tftp.md  vfs.md
map/: 大连市主干路.xlsx  大连市八十条主干路明细表_百度文库.webarchive
openstack/: cinder.asta  cinder.key  cinder.md  cinder.md.html
resume/: Resume_Neusoft_Zhaohedong_20181127.doc  Resume_Zhaohedong.doc  resume.md  ~$sume_Zhaohedong.doc  ~$项目经历.xlsx  规约转换器Demo设计.xlsx  项目经历.xlsx
scripts/: b.sh  c.sh  data.txt
tools/: ch-mount.sh  ip.sh  unset_env.sh  unset_proxy.sh
tushare/: test.py
(+418 files in other folders)
